2007-08-09  Lin Ma  <Lin.Ma@Sun.COM>

	* daemon/main.c: (get_state), (on_trigger_network_changed), (main):
	Added a callback for signal "active_env_changed" of nwam daemon to
	recontruct tooltip. Need further work.
	* daemon/notify.c: (nwam_notification_show_message): No change.
	* daemon/nwam-menu.c: (on_activate_env),
	(nwam_menu_menuitem_postfix), (nwam_menu_create_env_menuitems):
	* nbproject/configurations.xml: Support switch env on menu.

2007-08-08  Lin Ma  <Lin.Ma@Sun.COM>

	* daemon/nwam-menu.c: (nwam_menu_menuitem_postfix):
	* pixmaps/Makefile.am:
	* pixmaps/wireless-fragile.png:
	Add a transparent icon to fix menuitem alignment problem.

2007-08-07  Darren Kenny  <darren.kenny@sun.com>

	* Makefile.am, capplet/Makefile.am,
	 capplet/nwam-manager-properties.glade,
	 common/Makefile.am, daemon/Makefile.am,
	 daemon/nwam-manager-daemon.glade, pixmaps/Makefile.am:
	 Add CDDL Header

2007-08-07  Darren Kenny  <darren.kenny@sun.com>

	* capplet/main.c, capplet/nwam_conn_conf_ip_panel.c,
	 capplet/nwam_conn_conf_ip_panel.h, capplet/nwam_conn_stat_panel.c,
	 capplet/nwam_conn_stat_panel.h, capplet/nwam_env_pref_dialog.c,
	 capplet/nwam_env_pref_dialog.h, capplet/nwam_env_svc.c,
	 capplet/nwam_env_svc.h, capplet/nwam_net_conf_panel.c,
	 capplet/nwam_net_conf_panel.h, capplet/nwam_pref_dialog.c,
	 capplet/nwam_pref_dialog.h, capplet/nwam_pref_iface.c,
	 capplet/nwam_pref_iface.h, capplet/nwam_vpn_pref_dialog.c,
	 capplet/nwam_vpn_pref_dialog.h, capplet/nwam_wireless_dialog.c,
	 capplet/nwam_wireless_dialog.h, common/libnwamui.c,
	 common/libnwamui.h, common/nwam_ui_icons.c,
	 common/nwam_ui_icons.h, common/nwamui_daemon.c,
	 common/nwamui_daemon.h, common/nwamui_enm.c,
	 common/nwamui_enm.h, common/nwamui_env.c,
	 common/nwamui_env.h, common/nwamui_ncp.c,
	 common/nwamui_ncp.h, common/nwamui_ncu.c,
	 common/nwamui_ncu.h, common/nwamui_wifi_net.c,
	 common/nwamui_wifi_net.h, daemon/main.c,
	 daemon/notify.c, daemon/notify.h,